Resolves: tdf#137215 restore original modality before dialog loop ends

Change-Id: I83467e28534b781c51b8d75a023e41f3c6a03903
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105214
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>