sc/source/ui/dbgui/validate.cxx
@@ -95,6 +95,14 @@ ScValidationDlg::ScValidationDlg(weld::Window* pParent, const SfxItemSet* pArgSe
     AddTabPage("erroralert", ScTPValidationError::Create, nullptr);
 }
 
+void ScValidationDlg::EndDialog()
+{
+    // tdf#137215 ensure original modalality of true is restored before dialog loop ends
+    if (m_bOwnRefHdlr)
+        RemoveRefDlg(true);
+    ScValidationDlgBase::EndDialog();
+}
+
 ScValidationDlg::~ScValidationDlg()
 {
     if (m_bOwnRefHdlr)
