sc/source/ui/inc/validate.hxx
@@ -176,6 +176,8 @@ public:
 
     void            SetModal(bool bModal) { m_xDialog->set_modal(bModal); }
 
+    virtual void EndDialog() override;
+
     virtual void            SetReference( const ScRange& rRef, ScDocument& rDoc ) override
     {
         if ( m_pHandler && m_pSetReferenceHdl )
